Init: first version

--- a/src/components/Head/BaseHead.astro
+++ b/src/components/Head/BaseHead.astro
@@ -17,8 +17,10 @@ let permalink = 'https://howtocode.io';
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width" />
 <link rel="sitemap" href="/sitemap.xml"/>
-<link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-
+<link
+        href="/images/favicon-light.ico"
+        rel="icon"
+/>
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
