--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,23 @@ article > section > p > img {
   border-radius: 0.75rem !important;
 }
 
+@media only screen and (max-width: 1024px) {
+  article{
+    padding:0 !important;
+    margin:0 !important;
+    section > * {
+      padding-left: 0.75rem;
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 48rem !important;
+    }
+  }
+  article > section > p:has(img) {
+    padding-left: 0;
+    max-width: calc(100vw - (100vw - 100%)) !important;
+    img {
+      border-radius: 0 !important;
+      min-width: 100% !important;
+    }
+  }
+}
